--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,11 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-mustache')
     // 스프링 시큐리티 관련 의존성
     //소셜 로그인 등 클라이언트 입장에서 소셜 기능 구현 시 필요한 의존성
-    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+    //implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
     //세션 저장소로 jdbc 이용
     implementation('org.springframework.session:spring-session-jdbc')
     //스프링 시큐리티 테스트를 위한 도구 지원
-    testImplementation('org.springframework.security:spring-security-test')
+    //testImplementation('org.springframework.security:spring-security-test')
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
